# twitchpy

./: .gitignore  IRCBot.py  README.md  pyproject.toml
twitchpy/: __init__.py  chat.py  follows.py  twitch.py
