[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "twitchpy"
version = "0.0.1"
description = "Twitch API Library"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE.txt"}
keywords = []
authors = [
  {name = "dend", email = "dend456@gmail.com" }
]
maintainers = [
  {name = "dend", email = "dend456@gmail.com" }
]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "requires-python" key in this file.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = ["aiohttp", "python-dateutil"]
